MOTECH-2014 Create modal directive - added plugin bootstrap3-dialog

--- a/platform/mds/mds-web/pom.xml
+++ b/platform/mds/mds-web/pom.xml
@@ -230,7 +230,7 @@
                             <predefinedVars>
                                 _, $, angular, angularHandler, isBlank, handleResponse, blockUI, FileReader,
                                 motechAlert, unblockUI, motechConfirm, cloneArray, arraysEqual, resizeLayout,
-                                cloneObj, alertHandler, window, defaultLayout, innerLayout, moment, FormData
+                                cloneObj, alertHandler, window, defaultLayout, innerLayout, moment, FormData, BootstrapDialog
                             </predefinedVars>
                             <failOnIssues>${jslint.enable}</failOnIssues>
                         </configuration>
