--- a/platform/server-bundle/pom.xml
+++ b/platform/server-bundle/pom.xml
@@ -128,7 +128,7 @@
                                 $, angular, jQuery, jAlert, motechAlert, jConfirm, window, jAlertStackTrace, innerLayout,
                                 toLocale, moment, parseUri, handleResponse, angularHandler, blockUI, unblockUI, _,
                                 $rootScope, jgridDefaultSettings, alertHandler, SwaggerUi, getBaseUrl, getServerPrefix,
-                                parseResponse
+                                parseResponse, BootstrapDialog
                             </predefinedVars>
                             <failOnIssues>${jslint.enable}</failOnIssues>
                         </configuration>
