--- a/ui/bower.json
+++ b/ui/bower.json
@@ -55,7 +55,8 @@
     "jquery.alerts-1.1": "http://labs.abeautifulsite.net/archived/jquery-alerts/jquery.alerts-1.1.zip",
     "jquery-ui": "~1.11.4",
     "bootstrap-multiselect": "~0.9.13",
-    "angular-bootstrap": "0.6.0"
+    "angular-bootstrap": "0.6.0",
+    "bootstrap3-dialog":"1.34.9"
   },
   "resolutions": {
     "jquery": "1.11.3",
@@ -93,6 +94,16 @@
       "dependencies": {
         "jquery": "~1",
         "jquery-ui": "~1"
+      }
+    },
+    "bootstrap3-dialog":{
+      "main": [
+        "dist/css/bootstrap-dialog.css",
+        "dist/js/bootstrap-dialog.js"
+      ],
+      "dependencies": {
+        "bootstrap": ">= 3.1.0",
+        "jquery": ">= 1.9.0"
       }
     },
     "jquery.alerts-1.1": {
