MOTECH-2131: Remove gradients created with image file

--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "bower": "~1.6.8",
     "gulp": "^3.9.0",
     "gulp-bless": "^3.0.1",
+    "gulp-sass": "~2.2.0",
     "gulp-concat": "~2.6.0",
     "gulp-rename": "~1.2.2",
     "gulp-sequence": "~0.4.1",
