--- a/modules/tasks/tasks-test-bundle/pom.xml
+++ b/modules/tasks/tasks-test-bundle/pom.xml
@@ -103,8 +103,8 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <configuration>
                     <instructions>
-                        <Context-Path>tasks-test-bundle/api</Context-Path>
-                        <Resource-Path>tasks-test-bundle</Resource-Path>
+                        <Context-Path>testmodule/api</Context-Path>
+                        <Resource-Path>testmodule</Resource-Path>
                         <Blueprint-Enabled>true</Blueprint-Enabled>
                         <Export-Package>
                             org.motechproject.testmodule.service;version=${project.version},
